idf_component_register(
    SRCS
        "main.c"
        "eth_transport.c"
        "pca9685.c"
        "webserver.c"
        "system_stats.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        driver
        esp_eth
        esp_netif
        esp_event
        esp_http_server
        esp_timer
        nvs_flash
        json
        freertos
        esp_driver_i2c
        esp_driver_temperature_sensor
        micro_ros_espidf_component
)
